--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
             <p id="usererror" class="error"></p>
             <input type="password" placeholder="Password" id="pass"><br>
             <p id="passerror" class="error"></p>
-            <input type="submit">
         </form>
 
     </div>
@@ -73,6 +72,7 @@
            }
            else{
             document.getElementById("usererror").innerHTML = "";
+            uname.style.border = "1px solid green";
             flag=1;
            }
 
@@ -88,7 +88,8 @@
            }
            else{
             document.getElementById("passerror").innerHTML = "";
-            flag=1;
+            pass.style.border = "1px solid green";
+            flag=1;  
            }
            
            if(flag){
